Logs + CompletableFuture requests