@@ -1,48 +1,56 @@
 package me.veso.categoryservice.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import me.veso.categoryservice.client.UserClient;
 import me.veso.categoryservice.entity.UserId;
 import me.veso.categoryservice.repository.UserIdRepository;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class UserIdService {
     private final UserIdRepository userIdRepository;
-    private final RestTemplate client;
-    private final String userServiceUrl = "http://USER_SERVICE/users";
+    private final UserClient client;
 
     public UserId saveIdLongIfNotExists(Long id) {
-        String status = client.getForEntity(userServiceUrl + "/{id}", String.class, id).getBody();
-        if(!"approved".equals(status)){
-            throw new RuntimeException("User is not approved, actual status " + status);
-        }
+        CompletableFuture
+                .supplyAsync(() -> client.getStatusForId(id))
+                .exceptionally(ex -> {
+                    log.error("Failed to fetch user status for ID {}: {}", id, ex.getMessage());
+                    return null;
+                }).thenAccept(status -> {
+                    if (!"approved".equals(status)) {
+                        log.warn("User is not approved, status {}", status);
+                        throw new RuntimeException("User is not approved, actual status " + status);
+                    }
+                }).join();
 
         return userIdRepository.findByUserId(id)
                 .orElseGet(() -> userIdRepository.save(new UserId().setUserId(id)));
     }
 
     public List<UserId> saveIdsLongIfNotExist(List<Long> ids) {
-        String[] statuses = client.postForEntity(userServiceUrl + "/status", ids, String[].class).getBody();
+        List<String> statuses = CompletableFuture
+                .supplyAsync(() -> client.getStatusesForIds(ids))
+                .exceptionally(ex -> {
+                    log.error("Failed to fetch user statuses for IDs {}: {}", ids, ex.getMessage());
+                    return null;
+                }).join();
 
-        Map<Long, String> idStatusMap = IntStream.range(0, ids.size())
-                .boxed()
-                .collect(Collectors.toMap(ids::get, i -> statuses[i]));
-
-        List<Long> approvedIds = ids.stream()
-                .filter(id -> "approved".equals(idStatusMap.get(id)))
-                .toList();
+        List<Long> approvedIds = IntStream.range(0, ids.size())
+                .filter(i -> "approved".equals(statuses.get(i)))
+                .mapToObj(ids::get)
+                .collect(Collectors.toList());
 
         List<UserId> existingUserIds = userIdRepository.findAllByUserIdIn(approvedIds);
-
         Set<Long> existingIdSet = existingUserIds.stream()
                 .map(UserId::getUserId)
                 .collect(Collectors.toSet());
@@ -50,13 +58,13 @@ public class UserIdService {
         List<UserId> newUserIds = approvedIds.stream()
                 .filter(id -> !existingIdSet.contains(id))
                 .map(id -> new UserId().setUserId(id))
-                .toList();
+                .collect(Collectors.toList());
 
         if (!newUserIds.isEmpty()) {
             userIdRepository.saveAll(newUserIds);
         }
 
-        return Stream.concat(existingUserIds.stream(), newUserIds.stream())
-                .toList();
+        existingUserIds.addAll(newUserIds);
+        return existingUserIds;
     }
 }
